--- a/test/fixtures/matches.yml
+++ b/test/fixtures/matches.yml
@@ -1,3 +1,13 @@
+# == Schema Information
+#
+# Table name: matches
+#
+#  id              :integer          not null, primary key
+#  winning_team_id :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
