--- a/test/fixtures/matches.yml
+++ b/test/fixtures/matches.yml
@@ -6,6 +6,7 @@
 #  winning_team_id :integer
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
+#  games_count     :integer          default(0)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
